Fixed ul style and invision problem on mobile phone.

--- a/weitang-portfolio/css/weitang-portfolio.css
+++ b/weitang-portfolio/css/weitang-portfolio.css
@@ -428,7 +428,8 @@ section h3.section-subheading {
 }
 
 .portfolio-modal .modal-content ul {
-	list-style-type: none;
+	list-style: none;
+	padding-left: 0;
 	margin: 30px 0;
 }
 
